--- a/pom.xml
+++ b/pom.xml
@@ -50,10 +50,10 @@
             <id>dynmap-repo</id>
             <url>https://repo.mikeprimm.com/</url>
         </repository>
-        <repository>
+        <!-- <repository>
             <id>glaremasters repo</id>
             <url>https://repo.glaremasters.me/repository/towny/</url>
-        </repository>
+        </repository> -->
         <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
@@ -74,17 +74,24 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>eu</groupId>
+            <artifactId>Towny2</artifactId>
+            <version>SNAPSHOT-0.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- <dependency>
             <groupId>com.palmergames.bukkit.towny</groupId>
             <artifactId>towny</artifactId>
             <version>0.100.0.0</version>
             <scope>provided</scope>
-        </dependency>
+        </dependency> -->
         <dependency>
             <groupId>com.github.TownyAdvanced</groupId>
             <artifactId>TownyChat</artifactId>
             <version>0.90</version>
             <scope>provided</scope>
         </dependency>
+        
         <dependency>
             <groupId>com.github.bsideup.jabel</groupId>
             <artifactId>jabel-javac-plugin</artifactId>
@@ -92,6 +99,7 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
     <properties>
         <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
