--- a/pom.xml
+++ b/pom.xml
@@ -31,11 +31,10 @@
              <artifactId>maven-compiler-plugin</artifactId>
              <version>3.11.0</version>
              <configuration>
-                 <release>8</release>
-                 <source>${java.version}</source>
-                 <target>${java.version}</target>
+                 <source>17</source>
+                 <target>17</target>
                  <compilerArgs>
-                     <arg>-Xplugin:jabel</arg>
+                     <arg>-Xlint:unchecked</arg>
                  </compilerArgs>
              </configuration>
         </plugin>
@@ -50,10 +49,6 @@
             <id>dynmap-repo</id>
             <url>https://repo.mikeprimm.com/</url>
         </repository>
-        <!-- <repository>
-            <id>glaremasters repo</id>
-            <url>https://repo.glaremasters.me/repository/towny/</url>
-        </repository> -->
         <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
@@ -79,23 +74,10 @@
             <version>SNAPSHOT-0.1</version>
             <scope>provided</scope>
         </dependency>
-        <!-- <dependency>
-            <groupId>com.palmergames.bukkit.towny</groupId>
-            <artifactId>towny</artifactId>
-            <version>0.100.0.0</version>
-            <scope>provided</scope>
-        </dependency> -->
         <dependency>
             <groupId>com.github.TownyAdvanced</groupId>
             <artifactId>TownyChat</artifactId>
             <version>0.90</version>
-            <scope>provided</scope>
-        </dependency>
-        
-        <dependency>
-            <groupId>com.github.bsideup.jabel</groupId>
-            <artifactId>jabel-javac-plugin</artifactId>
-            <version>1.0.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
